Streamline callback and script loading logic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <body>
         <h1>Jason Peewee - a cache-friendly JSONP super-assistant</h1>
-        <p>No script dependencies. &lt; 800 bytes gzipped.</p>
+        <p>No script dependencies. ~ 800 bytes gzipped.</p>
 
         <h2>Example 1: GitHub bio</h2>
         <p>Load <a href="https://github.com/premasagar">Prem</a>'s bio <a href="https://api.github.com/users/premasagar">from the GitHub API</a> (and if you refresh the page, the data should already be cached for you):</p>
